--- a/ADSI/ADSI.csproj
+++ b/ADSI/ADSI.csproj
@@ -44,7 +44,9 @@
     <None Include="ADSI.nuspec">
       <SubType>Designer</SubType>
     </None>
+    <None Include="linqpad-samples\ADSI Sample.linq" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
