--- a/ADSI/ADSI.nuspec
+++ b/ADSI/ADSI.nuspec
@@ -13,6 +13,6 @@
     <description>$description$</description>
     <releaseNotes>Initial 0.1.0 release with support only for NameTranslate.</releaseNotes>
     <copyright>Copyright 2014</copyright>
-    <tags>ADSI AD Active Directory COM DLR dynamic C# NameTranslate</tags>
+    <tags>ADSI AD Active Directory COM DLR dynamic C# NameTranslate linqpad-samples</tags>
   </metadata>
 </package>
